--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
     <nav class="tabs is-size-4">   
         <a href="/" class="box">Home</a>  
         {{#if logged_in}}     
-            <a href="/api/posts" class="box">Posts</a>      
+            {{!-- <a href="/api/posts" class="box">Posts</a>       --}}
             <a href="/dash" class="box">Dashboard</a>
             <button class="btn" id="logout">Logout</button>
             {{!-- put an else here to show a login --}}
